<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Tea Inventory</string>

    <!-- Label for overflow menu option that inserts fake tea data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Tea</string>

    <!-- Label for overflow menu option that deletes all tea data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Teas</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a tea [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a tea</string>

    <!-- Title for the activity to add a new tea [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_tea">Add a Tea</string>

    <!-- Title for the activity to edit an existing tea [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_tea">Edit Tea</string>

    <!-- Label for editor menu option to save tea and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current tea [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new tea has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_tea_successful">Tea saved</string>

    <!-- Toast message in editor when new tea has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_tea_failed">Error with saving tea</string>

    <!-- Toast message in editor when current tea was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_tea_successful">Tea updated</string>

    <!-- Toast message in editor when current tea has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_tea_failed">Error with updating tea</string>

    <!-- Toast message in editor when current tea has failed to be updated as some information is missing[CHAR LIMIT=NONE] -->
    <string name="editor_update_tea_data_missing">Tea not updated, some information is missing</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current tea [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current tea was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_tea_successful">Tea deleted</string>

    <!-- Toast message in editor when current tea has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_tea_failed">Error with deleting tea</string>

    <!-- Dialog message to ask the user to confirm deleting the current tea [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this tea?</string>

    <!-- Dialog button text for the option to confirm deleting the current tea [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current tea [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for type information in the editor [CHAR LIMIT=30] -->
    <string name="category_type">Tea Type</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tea_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tea_quantity">0</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_tea_price">0.00</string>

    <!-- Units for price of the Tea in GBP [CHAR LIMIT=5] -->
    <string name="unit_tea_price">GBP</string>

    <!-- Label for dropdown menu option for black tea [CHAR LIMIT=20] -->
    <string name="type_black">Black</string>

    <!-- Label for dropdown menu option for green tea[CHAR LIMIT=20] -->
    <string name="type_green">Green</string>

    <!-- Label for dropdown menu option for herbal tea [CHAR LIMIT=20] -->
    <string name="type_herbal">Herbal</string>

</resources>
