<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_tea_name"
                android:hint="@string/hint_tea_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


        </LinearLayout>
    </LinearLayout>

    <!-- Tea type -->
    <LinearLayout
        android:id="@+id/container_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_type"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Tea type drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_type"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_tea_price"
                android:hint="@string/hint_tea_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_price_in_GBP"
                android:text="@string/unit_tea_price"
                style="@style/EditorUnitsStyle"/>


        </RelativeLayout>
    </LinearLayout>

    <!-- quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />


    </LinearLayout>

    <!-- Input fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_decrement"
            android:layout_toLeftOf="@+id/edit_tea_quantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="-"/>

        <EditText
            android:id="@+id/edit_tea_quantity"
            android:hint="@string/hint_tea_quantity"
            android:inputType="number"
            android:layout_width="80dp"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_increment"
            android:layout_toRightOf="@+id/edit_tea_quantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="+"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_order"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Order Tea"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <TextView
        android:id="@+id/image_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_tea"/>

</RelativeLayout>
